# docs/swagger.json
@@ -64,7 +64,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/entity.Credentials"
                         }
                     }
                 ],
@@ -110,7 +110,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entity.User"
+                            "$ref": "#/definitions/entity.Credentials"
                         }
                     }
                 ],
@@ -138,26 +138,16 @@
         }
     },
     "definitions": {
-        "entity.User": {
+        "entity.Credentials": {
             "type": "object",
             "properties": {
-                "id": {
-                    "type": "integer"
-                },
                 "login": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "user"
                 },
                 "password": {
-                    "type": "string"
-                },
-                "password_hash": {
-                    "type": "string"
-                },
-                "salt": {
-                    "type": "string"
-                },
-                "secret": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "pass"
                 }
             }
         }
