# internal/entity/credentials.go
@@ -1,0 +1,6 @@
+package entity
+
+type Credentials struct {
+	Login    string `json:"login" example:"user"`
+	Password string `json:"password" example:"pass"`
+}
